# Chaos-Fraktale

./: .gitignore  CMakeLists.txt  Praktikum1-1.cpp  Praktikum1-2.cpp  Praktikum1-2.h  Praktikum1-3.cpp  Praktikum1-4-erweiterung.cpp  Praktikum1-4.cpp  Praktikum1-5a.cpp  Praktikum1-5b.cpp  Praktikum1-5c-bcd-lut.cpp  Praktikum1-5c-bcd.cpp  Praktikum1-5c-gray-lut.cpp  Praktikum1-5c-gray.cpp  Praktikum2-1.cpp  Praktikum2-2.cpp  Praktikum2-5.cpp  Praktikum3-1.cpp  Praktikum3-3.cpp  ifs-test.ifs
Paper/: Labor1.aux  Labor1.out  Labor1.tex  Labor1.toc  Testfolge.aux
Paper/Screens/: main.c
Paper2/: Labor2.tex
Paper3/: Labor3.tex
